[package]
name = "spotify_liked_songs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-s3 = "0.17.0"
default = "0.1.2"
diffy = "0.2.2"
env_logger = "0.9.0"
futures = "0.3.21"
futures-util = "0.3.21"
rspotify = { version = "0.11.5", features = ["cli"] }
serde = { version = "1.0.143", features = ["serde_derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["macros", "io-util", "rt-multi-thread"] }
